# django_practice

./: .gitignore  README.md  main.py  manage.py  pyproject.toml  seed_endcontent.py  seed_games.py
account/: models.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_user_discord_webhook_url.py
nukki_project/: asgi.py  settings.py  urls.py  wsgi.py
party-front/: index.html  package-lock.json  package.json
party-front/src/: App.css  App.jsx
party-front/src/api/: axios.js
party-front/src/components/: Calendar.jsx  Dashboard.jsx  GachaPlanner.jsx  Login.jsx  Navbar.jsx  Register.jsx  ScreenshotUpload.jsx  Settings.jsx  SpendingHistory.jsx  WishList.jsx
remover/: apps.py  urls.py  views.py
remover/ai_engine/: model_loader.py  processor.py
remover/templates/remover/: index.html  result.html
scheduler/: admin.py  ai_advisor.py  discord_notify.py  models.py  serializers.py  urls.py  views.py
scheduler/migrations/: 0001_initial.py  0002_task_user.py  0003_tasklog_screenshot_savinggoal.py  0004_gachaprofile.py  0005_remove_gachaprofile_user_remove_savinggoal_user_and_more.py  0006_gachaprofile_user_savinggoal_user_spending_user_and_more.py  0007_remove_tasklog_screenshot.py
